# aipress24

./: .coveragerc-unit  .dockerignore  .editorconfig  .env.sample  .gitignore  .hop3ignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CITATION.cff  Dockerfile  Makefile  Procfile  Procfile-dev  README.md  TODO.md  TROUBLESHOOTING.md  cliff.toml  conftest.py  docker-compose.yml  flake.nix  fly.toml  git-city.toml  gunicorn.conf.py  hop3.toml  noxfile.py  publiccode.yml  pyproject.toml  requirements.txt  ruff.toml  runner.py  setup.cfg  static  tasks.py  tox.ini  wsgi.py
.builds/: alpine.yml  rockylinux.yml  ubuntu-2404.yml  ubuntu-lts.yml
.builds-ignored/: alpine.yml
.github/profile/: README.md
.github/workflows/: ci.yml  lint.yml  tests.yml
.reuse/: dep5
LICENSES/: LicenseRef-ARR.txt
data/: 00readme.md  Ontologies-41.ods  bano-streets-sample.json  sites-web.txt
data/country_zip_code/: README.md
docs/adr/: 001-circular-imports-and-module-layering.md  002-navigation-system-refactoring.md  003-navigation-acl-and-magic-roles.md
e2e_playwright/: README.md  __init__.py  conftest.py  test_01_swork.py  test_01_wire.py  test_02_other.py  test_admin_coverage.py  test_all_profiles_smoke.py  test_authorization_matrix.py  test_avis_lifecycle.py  test_bw_coverage.py  test_bw_lifecycle.py  test_communities.py  test_deep_navigation.py  test_functional_coverage.py  test_paywall_ui.py  test_upload_limits.py  test_wip_lifecycle.py  test_wip_subpages.py  utils.py
e2e_playwright/admin/: test_admin_coverage.py  test_admin_deep.py  test_admin_show_org_actions.py  test_validation_user_post.py
e2e_playwright/api/: test_api_endpoints.py  test_trix_blobs.py
e2e_playwright/biz/: test_biz_surfaces.py  test_offer_actions.py
e2e_playwright/bw/: test_billing_portal.py  test_bw_assign_missions.py  test_bw_back_to_platform.py  test_bw_configure.py  test_bw_coverage.py  test_bw_lifecycle.py  test_bw_wizard.py  test_cancel_subscription_branches.py  test_multi_bw.py  test_partnership_revoke_edges.py  test_stage3_paid_branches.py  test_stage_b3_post.py
e2e_playwright/common/: test_all_profiles_smoke.py  test_authorization_matrix.py  test_communities.py  test_deep_navigation.py  test_functional_coverage.py  test_no_html_leak.py
e2e_playwright/cross_modules/: test_cm1_article_propagation.py  test_cm2_partnership_communique.py  test_cm3_avis_ciblage_full.py  test_cm4_candidature_propagation.py  test_cm5_bw_activation_propagation.py  test_cm6_paywall_purchase.py  test_cm7_swork_post_propagation.py
e2e_playwright/debug/: test_debug_module.py
e2e_playwright/events/: test_events_public.py
e2e_playwright/infra/: test_mail_harness.py  test_upload_limits.py
e2e_playwright/kyc/: readme.md  test_journaliste.py  test_kyc_smoke.py
e2e_playwright/notifications/: test_notifications_surfaces.py
e2e_playwright/preferences/: test_bug_0158_invitations_page.py  test_contact_round_trip.py  test_preferences_posts.py
e2e_playwright/public/: test_backdoor.py  test_public_pages.py  test_sandbox.py  test_system_extra.py
e2e_playwright/regressions/: _shared.py  test_bug_0109_bw_logo_no_hxboost.py  test_bug_0118_session_clear_on_login.py  test_bug_0122_partnership_confirm_back_buttons.py  test_bugs_0050_0088.py  test_bugs_0095_0128.py  test_bugs_0128_0132.py  test_bugs_0129_0132.py  test_bugs_0133_0172.py  test_resolved_bugs.py
e2e_playwright/search/: test_search.py
e2e_playwright/security/: test_auth_flows.py  test_security_account_flows.py
e2e_playwright/stripe/: test_paid_bw_activation.py  test_stripe_mock_wired.py  test_webhook_event_dispatch.py
e2e_playwright/swork/: test_bug_0135_delegated_org_no_500.py  test_group_detail_render.py  test_social_aside_layout.py  test_swork_surfaces.py
e2e_playwright/wip/: test_alt_content.py  test_article_images.py  test_avis_lifecycle.py  test_billing.py  test_ciblage_dual_selectors.py  test_communique_images.py  test_content_crud.py  test_dropdown_zindex.py  test_eventroom.py  test_rdv_branches.py  test_sujet_author_block.py  test_wip_lifecycle.py  test_wip_subpages.py
e2e_playwright/wire/: test_paywall_ui.py  test_purchase_edges.py  test_wire_surfaces.py
etc/: settings.toml
icons/: tasks.py
migrations/: env.py
migrations/versions/: 01dd37023542_remove_organisation_fields.py  038a4b19c59e_add_geo_loc_to_avis_enquete.py  04263f834f85_businesswall_attributes.py  09bc418c72a9_.py  0ce352f51d81_add_remove_organisation_bw_type.py  0dffbb0384b6_rename_statut_status_for_several_columns.py  0fb901d6eef6_add_eventroom_id_field_to_eventpost.py  (+113 more)
notes/: 2025-12-navigation-refactor.md  CITATION.cff  DEPLOYMENT.md  Install_S3_MinIO_MacOS.md  OLD-CHANGELOG.md  POC-20251107.md  PUBLIC_CODE_COMPLIANCE.md  STANDARDS.md  TROUBLESHOOTING.md  business-wall-overview.md  lessons-learned.md
nua/: _nua-build-config.json  _nua-config.json  nua-bootstrap-image.sh  nua-config.toml  nua-install-build-agent.py  start.sh
sandbox-pages/: reglage-ventes-droits-tw.html  reglage-ventes-droits.html
scripts/: README-hop3.md  check_s3.py  check_s3_signed_urls.py  check_test_profiles.py  cloc_test_ratios.py  export-complete-user.py  export-user.py  fly-release.sh  gen-source-tree.py  generate-forms3.py  hop3-before-run.sh  hop3-ci-config.sh  hop3-config.example.sh  hop3_db_bootstrap.py  import-complete-user.py  import-user.py  pg-test.py  poc-scheduler.py  pre-build.py  release.py  remove_all_article_purchases.py  remove_all_bw.py  run.py  run_e2e.py  stripe_delete_all_prod_price.py  stripe_export_prod_price.py  stripe_import_prod_price.py  update-version.py
static-pages/: AccordDiffusionContenusJournalistiques.md  CGV-BusinessWall.md  a-propos.md  cgu.md  conditions.md  confidentialite.md  contact.md  offre-communicants.md  offre-entreprises.md  offre-experts.md  offre-journalistes.md  pricing.html  soutiens.md
tests/: conftest.py  readme.md  ruff.toml
tests-e2e/: conftest.py  constants.py  readme.md  test_00.py  test_01_events.py  test_01_wip.py
vite/: bun.lockb  index.html  main.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
(+2264 files in other folders)
